--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/sq"
-        android:label="@string/app_name"
+        android:label="SimpleWeather"
         android:roundIcon="@drawable/rd"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -38,4 +38,6 @@
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
